--- a/bio.html
+++ b/bio.html
@@ -1,9 +1,8 @@
 <link rel="stylesheet" href="21011401.css">
 
-<h1>Bio</h1>
-
-
-<element class="b1"></element>
+<div class="banner-image">
+  <div class="banner-text">Bio</div>
+</div>
 
 Normal text. <b>Bold</b> <i>Italic</i> <u>Underline</u> <s>Strikethrough</s> <h>Highlight</h> <a href="link">Link</a>
 
